[package]
name = "ipf_survey"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Survey raking utility that extends the ipf crate."
readme = "README.md"
repository = "https://github.com/alexmccray23/ipf_survey"
keywords = ["survey", "raking", "weighting", "ipf", "statistics"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = []
# Parallel IPF inner loop via the ipf crate's rayon support.
rayon = ["ipf/rayon"]
# Per-iteration residual history and NaN/Inf scanning in the IPF solver.
diagnostics = ["ipf/diagnostics"]

[dependencies]
ipf = "0.2"

[dev-dependencies]
proptest = "1.10"
